k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-app-service
  labels:
    app: saas-app
spec:
  type: NodePort
  selector:
    app: saas-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
      name: http
